<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout_DetailsActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr"
    tools:context=".ui.DetailsActivity">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar_details"
                style="@style/Widget.MaterialComponents.Toolbar.Primary"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:theme="@style/MyThemeOverlay_Toolbar"
                app:layout_scrollFlags="scroll|enterAlways">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="end"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/toolbar_textView"
                        android:text="@string/product_details" />

                    <ImageButton
                        android:id="@+id/btn_more_toolbar_details"
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:background="@null"
                        android:src="@drawable/ic_vertical_more"
                        android:contentDescription="@string/more_option"/>
                </LinearLayout>

            </com.google.android.material.appbar.MaterialToolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nested_scroll_details"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_details"
                    android:layout_width="wrap_content"
                    android:layout_height="250dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"
                    android:src="@drawable/ic_launcher_background"
                    android:contentDescription="@string/product_pic"/>

                <RatingBar
                    android:id="@+id/ratingBar_details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:numStars="5"
                    android:theme="@style/RatingBar" />

                <TextView
                    android:id="@+id/tv_tittle_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:fontFamily="@font/digikala_font_bold"
                    android:gravity="start"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:text="@string/product_tittle"
                    android:textSize="@dimen/large_font_size" />

                <View
                    style="@style/view_separator"
                    android:background="@color/line_separator" />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="8dp"
                    android:stretchColumns="*">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:layout_width="180dp"
                            android:layout_height="match_parent"
                            android:padding="16dp"
                            android:src="@drawable/farsi_digikala_logo_new"
                            android:contentDescription="@string/digikala_logo_seller" />

                        <TextView
                            android:id="@+id/tv_seller_details"
                            style="@style/table_details_textViews"
                            android:text="@string/seller" />
                    </TableRow>

                    <View
                        style="@style/view_separator"
                        android:background="@color/line_separator" />

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/tv_id_details"
                            style="@style/table_details_textViews"
                            android:layout_gravity="center"
                            android:text="@string/number"
                            android:textSize="@dimen/large_font_size" />

                        <TextView
                            android:id="@+id/tv_brand_details"
                            style="@style/table_details_textViews"
                            android:text="@string/id" />
                    </TableRow>

                    <View
                        style="@style/view_separator"
                        android:background="@color/line_separator" />

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/tv_model_details"
                            style="@style/table_details_textViews"
                            android:layout_gravity="center"
                            android:text="@string/text_sample" />

                        <TextView
                            android:id="@+id/tv_guarentee_details"
                            style="@style/table_details_textViews"
                            android:text="@string/model" />
                    </TableRow>

                    <View
                        style="@style/view_separator"
                        android:background="@color/line_separator" />

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/tv_price_details"
                            style="@style/table_details_textViews"
                            android:layout_gravity="center"
                            android:fontFamily="@font/digikala_font_bold"
                            android:gravity="end"
                            android:text="@string/number"
                            android:textColor="@color/colorAccent"
                            android:textSize="@dimen/huge_font_size" />

                        <TextView
                            android:id="@+id/tv_price_details_tittle"
                            style="@style/table_details_textViews"
                            android:text="@string/price" />
                    </TableRow>
                </TableLayout>

                <View
                    style="@style/view_separator"
                    android:background="@color/line_separator" />

                <ImageView
                    android:layout_width="140dp"
                    android:layout_height="50dp"
                    android:layout_gravity="end"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:fontFamily="@font/digikala_font_bold"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:src="@drawable/digikala_logo_tips"
                    android:textSize="@dimen/standard_font_size"
                    android:contentDescription="@string/digikala_logo_suggestion"/>

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="4dp"
                    android:fontFamily="@font/digikala_font"
                    android:justificationMode="inter_word"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:text="@string/digikala_tips" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingStart="@dimen/standard_padding"
                    android:paddingEnd="@dimen/standard_padding">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_call"
                        style="@style/btn_details"
                        android:layout_marginEnd="@dimen/large_margin"
                        android:background="@drawable/selector_default_button"
                        android:onClick="onclickSms"
                        android:text="@string/sms" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_sms"
                        style="@style/btn_details"
                        android:layout_marginStart="@dimen/large_margin"
                        android:background="@drawable/selector_default_button"
                        android:onClick="onclickCall"
                        android:text="@string/call" />
                </LinearLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.drawerlayout.widget.DrawerLayout>