<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:elevation="@dimen/standard_card_elevation"
    app:cardCornerRadius="@dimen/standard_card_radius">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foreground="?attr/selectableItemBackground"
        android:padding="8dp">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/iv_item"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/ic_launcher_background"
            app:riv_corner_radius="4dp" />

        <TextView
            android:id="@+id/tv_model_tittle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_name"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="4dp"
            android:fontFamily="@font/digikala_font_light"
            android:text="@string/model"
            android:textColor="@color/line_separator"
            android:textSize="@dimen/small_font_size" />

        <TextView
            android:id="@+id/tv_model"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/tv_model_tittle"
            android:layout_marginEnd="4dp"
            android:layout_toStartOf="@id/tv_model_tittle"
            android:fontFamily="@font/digikala_font_light"
            android:text="@string/text_sample"
            android:textColor="@color/line_separator"
            android:textSize="@dimen/small_font_size" />

        <TextView
            android:id="@+id/tv_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/tv_id_tittle"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="4dp"
            android:layout_toStartOf="@id/tv_id_tittle"
            android:fontFamily="@font/digikala_font_light"
            android:text="@string/number"
            android:textColor="@color/line_separator"
            android:textSize="@dimen/small_font_size" />

        <TextView
            android:id="@+id/tv_id_tittle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_model_tittle"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:fontFamily="@font/digikala_font_light"
            android:text="@string/product_number"
            android:textColor="@color/line_separator"
            android:textSize="@dimen/small_font_size" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            android:ellipsize="end"
            android:fontFamily="@font/digikala_font"
            android:maxLines="1"
            android:text="@string/product_tittle"
            android:textSize="@dimen/standard_font_size" />

        <View
            android:id="@id/line_seprator"
            style="@style/view_separator"
            android:layout_below="@id/tv_id_tittle"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:layout_toEndOf="@id/iv_item"
            android:background="@color/line_separator" />

        <TextView
            android:id="@+id/tv_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/line_seprator"
            android:layout_alignBaseline="@id/tv_toman"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:fontFamily="@font/digikala_font"
            android:text="@string/price"
            android:textColor="@color/price_color"
            android:textSize="@dimen/large_font_size" />

        <TextView
            android:id="@+id/tv_toman"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/line_seprator"
            android:layout_marginStart="4dp"
            android:layout_toStartOf="@id/tv_price"
            android:fontFamily="@font/digikala_font"
            android:text="@string/toman"
            android:textColor="@color/price_color"
            android:textSize="@dimen/small_font_size" />
    </RelativeLayout>

</androidx.cardview.widget.CardView>