<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottie_maps"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:lottie_autoPlay="true"
        app:lottie_loop="false"
        app:lottie_rawRes="@raw/lottie_satellite" />


    <ImageButton
        android:id="@+id/img_btn_accept_location"
        style="@style/img_btn_alert_dialog"
        android:background="@drawable/selector_green_btn"
        android:src="@drawable/ic_check"
        android:textSize="@dimen/standard_font_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0"
        android:contentDescription="@string/accept"/>


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lottie_maps"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/digikala_font_light"
            android:gravity="start"
            android:text="@string/latitude" />

        <TextView
            android:id="@+id/tv_latitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/digikala_font_light"
            android:gravity="center"
            android:text="@string/number" />


        <View
            style="@style/view_separator"
            android:background="@color/line_separator" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/digikala_font_light"
            android:gravity="start"
            android:text="@string/longitude" />

        <TextView
            android:id="@+id/tv_longitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/digikala_font_light"
            android:gravity="center"
            android:text="@string/number" />


        <View
            style="@style/view_separator"
            android:background="@color/line_separator" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/digikala_font_light"
            android:gravity="start"
            android:text="@string/altitude" />

        <TextView
            android:id="@+id/tv_altitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/digikala_font_light"
            android:gravity="center"
            android:text="@string/number" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>